--- a/IdentityServer/Views/Auth/Login.cshtml
+++ b/IdentityServer/Views/Auth/Login.cshtml
@@ -16,3 +16,6 @@
         <button type="submit">Sign In</button>
     </div>
 </form>
+<div>
+    <a asp-controller="Auth" asp-action="Register" asp-route-returnUrl="@Model.ReturnUrl">Register new account</a>
+</div>
